--- a/CareerTrack/29.md
+++ b/CareerTrack/29.md
@@ -4,10 +4,39 @@ MVC: a software design pattern for developing user interfaces that divides the r
 
 USER uses --> CONTROLLER manipulates --> MODEL updates --> VIEW sees --> (back to user)
 
-
-
 ## Architecting Single Page Applications (https://hackernoon.com/architecting-single-page-applications-b842ea633c2e)
 
+VIEW:
+-presentational components
+  -recieve state through props
+  -emit new state through events
+-container components
+  -recieve state from the store
+  -supply state to the presentational components
+  -send new state to the store
+
+APPLICATION SERVICES
+-project (interpret) state
+-orchestrate external operations
+
+STORE
+-holds the state
+-state is immutable
+-acts as a publisher
+-notifies Subscribers about the state changes
+
+DOMAIN (represents state) & DOMAIN SERVICES (encapsulate business logic, side-effect free)
+
 ## React MVC (https://blog.testdouble.com/posts/2019-11-04-react-mvc/)
+
+guiding light of Model View Controller (MVC) is separating presentation from domain
+
+application’s “domain” is where we model our perception of the problem and its solution. By making this code separate—without reference to any UI—it could be modeled more correctly, tested more deeply, and presented more numerously.
+
+object-oriented vs functional-programming language (React is FP)
+
+
+
+
 
 ## Reconciliation (https://reactjs.org/docs/reconciliation.html)
