--- a/CareerTrack/31.md
+++ b/CareerTrack/31.md
@@ -1,7 +1,33 @@
 ## Building Your Own Hooks (https://reactjs.org/docs/hooks-custom.html)
 
+custom hooks: functions that start with "use" and may call other Hooks
+we can set arguments and returns
+every time a custom hook is used, all state and effects inside of it are completely isolated
+
 ## Rules of Hooks (https://reactjs.org/docs/hooks-rules.html)
+
+only call hooks at the top level
+only call hooks from react functions (not in normal JS functions)
 
 ## Guide to Learning React Hooks (https://www.telerik.com/kendo-react-ui/react-hooks-guide/#toc-custom-react-hooks)
 
+Hooks can call other hooks
+Can call useState and useEffect many times
+useEffect is like the componentDidMount in class components
+useContext helps make jsx cleaner
+useReducer
+inputRef
+anything that can be a function can also be a react hook
+
 ## 10 React Hooks to Have in your Toolbox (https://blog.bitsrc.io/10-react-custom-hooks-you-should-have-in-your-toolbox-aa27d3f5564d)
+
+useArray
+react-use-form-state
+react-fetch-hook
+useMedia
+react-useportal hook
+react-firebase-hooks
+use-onClickOutside hook
+useIntersectionObserver
+use-location hook
+use-redux hook
