--- a/CareerTrack/33.md
+++ b/CareerTrack/33.md
@@ -1,2 +1,35 @@
 ## Composition Vs Inheritance (https://reactjs.org/docs/composition-vs-inheritance.html)
 
+recommended to use composition instead of inheritance
+
+# Containment
+
+use children prop to pass children elements (allows passing children via nesting the JSX)
+
+    function FancyBorder(props) {
+      return (
+        <div className={'FancyBorder FancyBorder-' + props.color}>
+          {props.children}
+        </div>
+      );
+    }
+
+TOOOOOOO THIS:
+
+    function WelcomeDialog() {
+      return (
+        <FancyBorder color="blue">
+          <h1 className="Dialog-title">
+            Welcome
+          </h1>
+          <p className="Dialog-message">
+            Thank you for visiting our spacecraft!
+          </p>
+        </FancyBorder>
+      );
+    }
+
+If you want to reuse non-UI functionality between components: extracting it into a separate JavaScript module. 
+
+The components may import it and use that function, object, or a class, without extending it.
+
