--- a/CareerTrack/34.md
+++ b/CareerTrack/34.md
@@ -1,12 +1,57 @@
 ## Motivation in Redux (https://redux.js.org/understanding/thinking-in-redux/motivation)
+don't give up! you can manage state even when it becomes complicated with REDUX. 
 
 ## Three Principles (https://redux.js.org/understanding/thinking-in-redux/three-principles)
+<ol>
+<li> Single source of truth: The global state of your application is stored in an object tree within a single store. 
+<li> State is read-only: The only way to change the state is to emit an action, an object describing what happened.
+<li> Changes are made with pure functions: To specify how the state tree is transformed by actions, you write pure reducers.
+</ol>
 
 ## Core Concepts (https://redux.js.org/introduction/core-concepts)
+To change something in the state, you need to dispatch an action. 
+An action is a plain JavaScript object that describes what happened. 
+To tie state and actions together, we write a function called a reducer. 
+Reducer is just a function that takes state and action as arguments, and returns the next state of the app.
+90% of code in Redux is plain javascript.
 
-## Actions (https://redux.js.org/tutorials/fundamentals/part-2-concepts-data-flow) 
+## Data Flow (https://redux.js.org/tutorials/fundamentals/part-2-concepts-data-flow) 
+<ul>
+<li>One-way data flow: Actions(events that occur in the app based on input, triggering updates in the state) >> State(the source of truth that drives the app) >> View(a declarative description of the UI based on the current state) >> (back to Actions, and so on) 
+<li>simplicity can break down when we have multiple components that need to share and use the same state
+<li>Core of Redux: a single centralized place to contain the global state in your application, and specific patterns to follow when updating that state to make the code predictable.
 
 ## Reducers (https://redux.js.org/tutorials/fundamentals/part-3-state-actions-reducers)
 
+State, Actions, and Reducers are the building blocks of Redux. Every Redux app has state values, creates actions to describe what happened, and uses reducer functions to calculate new state values based on the previous state and an action.
 
-
+<ul>
+<li>Redux apps use plain JS objects, arrays, and primitives as the state values
+  <ul>
+  <li>The root state value should be a plain JS object
+  <li>The state should contain the smallest amount of data needed to make the app work
+  <li>Classes, Promises, functions, and other non-plain values should not go in the Redux state
+  <li>Reducers must not create random values like Math.random() or Date.now()
+  <li>It's okay to have other state values that are not in the Redux store (like local component state) side-by side with Redux
+  </ul>
+<li>Actions are plain objects with a type field that describe what happened
+  <ul>
+  <li>The type field should be a readable string, and is usually written as 'feature/eventName'
+  <li>Actions may contain other values, which are typically stored in the action.payload field
+  <li>Actions should have the smallest amount of data needed to describe what happened
+  </ul>
+<li>Reducers are functions that look like (state, action) => newState
+  <ul>
+  <li>Reducers must always follow special rules:
+  <li>Only calculate the new state based on the state and action arguments
+  <li>Never mutate the existing state - always return a copy
+  <li>No "side effects" like AJAX calls or async logic
+  </ul>
+<li>Reducers should be split up to make them easier to read
+  <ul>
+  <li>Reducers are usually split based on top-level state keys or "slices" of state
+  <li>Reducers are usually written in "slice" files, organized into "feature" folders
+  <li>Reducers can be combined together with the Redux combineReducers function
+  <li>The key names given to combineReducers define the top-level state object keys
+  </ul>
+</ul>
